# BillingApp

./: .gitignore  README.md  billing.bat  main.py  pyproject.toml  requirements  setup.py
billing/data/: dummy_data.json
billing/database/: database.py  utils.py
billing/invoice/: invoice.py  utils.py
billing/utils/: paths.py
scripts/: main.py
src/billing/: __main__.py
src/billing/data/: dummy_database.json
src/billing/database/: __init__.py  database.py  exceptions.py
src/billing/invoice/: __init__.py  invoice.py  template.py
src/billing/utils/: auto.py  paths.py  setup_logger.py
