[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "billing"
version = "1.0.0"
description = "Billing package"
authors = [
    { name = "Nicolas Marois" }
]
maintainers = [
    { name = "Nicolas Marois" }
]
readme = "README.md"
requires-python = ">=3.8"

# Include packages from src/
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
billing = ["dummy_data/*.json"]